crates/oxc_react_compiler/tests/snapshots/arrow-function-with-implicit-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/arrow-function-with-implicit-return.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
const Test = () => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
};
export const FIXTURE_ENTRYPOINT = {
	fn: Test,
	params: [{}]
};
