crates/oxc_react_compiler/tests/snapshots/assignment-expression-computed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/assignment-expression-computed.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.x) {
		x = [props.x];
		x[0] = x[0] * 2;
		x["0"] = x["0"] + 3;
		$[0] = props.x;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ x: 2 }],
	isComponent: false
};
