crates/oxc_react_compiler/tests/snapshots/assignment-in-nested-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/assignment-in-nested-if.js
---
import { c as _c } from "react/compiler-runtime";
function useBar(props) {
	const $ = _c(1);
	let z;
	if (props.a) {
		if (props.b) {
			let t0;
			if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
				t0 = baz();
				$[0] = t0;
			} else {
				t0 = $[0];
			}
			z = t0;
		}
	}
	return z;
}
