crates/oxc_react_compiler/tests/snapshots/assignment-variations-complex-lvalue-array.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/assignment-variations-complex-lvalue-array.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	let a;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		a = [[1]];
		const first = a.at(0);
		first.set(0, 2);
		$[0] = a;
	} else {
		a = $[0];
	}
	return a;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
