crates/oxc_react_compiler/tests/snapshots/assignment-variations.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/assignment-variations.js
---
function f() {
	return 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: f,
	params: [],
	isComponent: false
};
