crates/oxc_react_compiler/tests/snapshots/async-array-selected-member.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-array-selected-member.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const obj = [async () => {
		await 0;
		cb();
	}, _temp];
	obj[1]();
	return null;
}
function _temp() {
	return null;
}
