crates/oxc_react_compiler/tests/snapshots/async-bound-closure-not-invoked.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-bound-closure-not-invoked.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const run = async () => {
		await 0;
		cb();
	};
	run.bind(null);
	return null;
}
