crates/oxc_react_compiler/tests/snapshots/async-bound-closure-safe-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-bound-closure-safe-overwrite.js
---
function Component() {
	let count = 0;
	let cb = () => count++;
	const run = async () => {
		await 0;
		cb();
	};
	const bound = run.bind(null);
	cb = _temp;
	bound();
	return null;
}
function _temp() {
	return null;
}
